# QUB_Controller

./: .gitignore  CMakeLists.txt  README.md
apps/: motor_config.cpp  position_read.cpp  test_4ch.cpp  test_can_init.cpp  test_connection.cpp  test_imu.cpp  test_rt_thread.cpp
docs/: motor_config.md  position_read.md
include/: imu_driver.hpp  motor_thread.hpp  pcan_channel.hpp  robot_config.hpp  robstride.hpp  rt_utils.hpp  shared_state.hpp
src/: Robstride.cpp  Robstride.hpp  imu_driver.cpp  motor_thread.cpp  pcan_channel.cpp
